feat: [IRO-282]: add slack socket communication and handlers (#6)
* feat: [IRO-282]: add socket mode communication for slack


* feat: update incident schema


* feat: update manifest.yaml


* feat: add getIncident REST API


* feat: fmt swag annotations


---------
