# server/docs/swagger.json
@@ -272,6 +272,76 @@
                 }
             }
         },
+        "/incident/get": {
+            "get": {
+                "description": "Get incident",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Incident Management"
+                ],
+                "summary": "Get incident",
+                "operationId": "GetIncident",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "incident identifier",
+                        "name": "incidentIdentifier",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "accountIdentifier",
+                        "name": "accountIdentifier",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "orgIdentifier",
+                        "name": "orgIdentifier",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "projectIdentifier",
+                        "name": "projectIdentifier",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/incident.GetResponseDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.DefaultResponseDTO"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.DefaultResponseDTO"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.DefaultResponseDTO"
+                        }
+                    }
+                }
+            }
+        },
         "/incident/list": {
             "get": {
                 "description": "List incidents",
@@ -308,10 +378,10 @@
                     },
                     {
                         "enum": [
-                            "availability",
-                            "latency",
-                            "security",
-                            "other"
+                            "Availability",
+                            "Latency",
+                            "Security",
+                            "Other"
                         ],
                         "type": "string",
                         "description": "type",
@@ -320,10 +390,9 @@
                     },
                     {
                         "enum": [
-                            "SEV1",
-                            "SEV2",
-                            "SEV3",
-                            "SEV4"
+                            "SEV0 - Critical, High Impact",
+                            "SEV1 - Major, Significant Impact",
+                            "SEV2 - Minor, Low Impact"
                         ],
                         "type": "string",
                         "description": "severity",
@@ -332,15 +401,12 @@
                     },
                     {
                         "enum": [
-                            "started",
-                            "detected",
-                            "acknowledged",
-                            "identified",
-                            "mitigated",
-                            "investigating",
-                            "postmortemStarted",
-                            "PostmortemCompleted",
-                            "resolved"
+                            "Started",
+                            "Acknowledged",
+                            "Investigating",
+                            "Identified",
+                            "Mitigated",
+                            "Resolved"
                         ],
                         "type": "string",
                         "description": "status",
@@ -679,6 +745,19 @@
                 "Link"
             ]
         },
+        "incident.ChangeType": {
+            "type": "string",
+            "enum": [
+                "updateSeverity",
+                "updateStatus",
+                "addComment"
+            ],
+            "x-enum-varnames": [
+                "UpdateSeverity",
+                "UpdateStatus",
+                "AddComment"
+            ]
+        },
         "incident.Channel": {
             "type": "object",
             "properties": {
@@ -790,6 +869,12 @@
                 "name": {
                     "type": "string"
                 },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/incident.Role"
+                    }
+                },
                 "services": {
                     "type": "array",
                     "items": {
@@ -856,7 +941,7 @@
                     "type": "string"
                 },
                 "createdAt": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "createdBy": {
                     "$ref": "#/definitions/utils.UserDetails"
@@ -898,7 +983,7 @@
                     "type": "boolean"
                 },
                 "removedAt": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "roles": {
                     "type": "array",
@@ -933,11 +1018,17 @@
                         "type": "string"
                     }
                 },
+                "timelines": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/incident.Timeline"
+                    }
+                },
                 "type": {
                     "$ref": "#/definitions/incident.Type"
                 },
                 "updatedAt": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "updatedBy": {
                     "$ref": "#/definitions/utils.UserDetails"
@@ -983,6 +1074,23 @@
                 }
             }
         },
+        "incident.GetResponseDTO": {
+            "type": "object",
+            "properties": {
+                "correlationId": {
+                    "type": "string"
+                },
+                "data": {
+                    "$ref": "#/definitions/incident.Incident"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "incident.Incident": {
             "type": "object",
             "required": [
@@ -1020,7 +1128,7 @@
                     }
                 },
                 "createdAt": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "createdBy": {
                     "$ref": "#/definitions/utils.UserDetails"
@@ -1062,7 +1170,7 @@
                     "type": "boolean"
                 },
                 "removedAt": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "roles": {
                     "type": "array",
@@ -1097,11 +1205,17 @@
                         "type": "string"
                     }
                 },
+                "timelines": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/incident.Timeline"
+                    }
+                },
                 "type": {
                     "$ref": "#/definitions/incident.Type"
                 },
                 "updatedAt": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "updatedBy": {
                     "$ref": "#/definitions/utils.UserDetails"
@@ -1176,12 +1290,12 @@
         "incident.RoleType": {
             "type": "string",
             "enum": [
-                "incidentCommander",
-                "communicationsLiaison"
+                "Incident Commander",
+                "Communications Lead"
             ],
             "x-enum-varnames": [
                 "IncidentCommander",
-                "CommunicationsLiaison"
+                "CommunicationsLead"
             ]
         },
         "incident.Service": {
@@ -1198,16 +1312,14 @@
         "incident.Severity": {
             "type": "string",
             "enum": [
-                "SEV1",
-                "SEV2",
-                "SEV3",
-                "SEV4"
+                "SEV0 - Critical, High Impact",
+                "SEV1 - Major, Significant Impact",
+                "SEV2 - Minor, Low Impact"
             ],
             "x-enum-varnames": [
+                "Severity0",
                 "Severity1",
-                "Severity2",
-                "Severity3",
-                "Severity4"
+                "Severity2"
             ]
         },
         "incident.Slack": {
@@ -1227,6 +1339,15 @@
                 },
                 "channelStatus": {
                     "$ref": "#/definitions/incident.ChannelStatus"
+                },
+                "teamDomain": {
+                    "type": "string"
+                },
+                "teamId": {
+                    "type": "string"
+                },
+                "teamName": {
+                    "type": "string"
                 }
             }
         },
@@ -1234,7 +1355,7 @@
             "type": "object",
             "properties": {
                 "createdAt": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "duration": {
                     "type": "integer"
@@ -1246,7 +1367,7 @@
                     "$ref": "#/definitions/incident.Status"
                 },
                 "updatedAt": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "userDetails": {
                     "$ref": "#/definitions/utils.UserDetails"
@@ -1256,35 +1377,50 @@
         "incident.Status": {
             "type": "string",
             "enum": [
-                "started",
-                "detected",
-                "acknowledged",
-                "identified",
-                "mitigated",
-                "investigating",
-                "postmortemStarted",
-                "PostmortemCompleted",
-                "resolved"
+                "Started",
+                "Acknowledged",
+                "Investigating",
+                "Identified",
+                "Mitigated",
+                "Resolved"
             ],
             "x-enum-varnames": [
                 "Started",
-                "Detected",
                 "Acknowledged",
+                "Investigating",
                 "Identified",
                 "Mitigated",
-                "Investigating",
-                "PostmortemStarted",
-                "PostmortemCompleted",
                 "Resolved"
             ]
+        },
+        "incident.Timeline": {
+            "type": "object",
+            "properties": {
+                "change": {},
+                "createdAt": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "type": {
+                    "$ref": "#/definitions/incident.ChangeType"
+                },
+                "updatedAt": {
+                    "type": "integer"
+                },
+                "userDetails": {
+                    "$ref": "#/definitions/utils.UserDetails"
+                }
+            }
         },
         "incident.Type": {
             "type": "string",
             "enum": [
-                "availability",
-                "latency",
-                "security",
-                "other"
+                "Availability",
+                "Latency",
+                "Security",
+                "Other"
             ],
             "x-enum-varnames": [
                 "Availability",
@@ -1320,6 +1456,9 @@
             "type": "object",
             "properties": {
                 "email": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 },
                 "source": {
